# lib

./: .gitignore  LICENSE  README.md  libcairo.dylib  main.py  pyproject.toml  tox.ini
git/: __init__.py
git/police/: constants.py
git/police/augmenters/: __init__.py
git/police/augmenters/antonym/: __init__.py
git/police/augmenters/drunk_typing/: __init__.py
git/police/augmenters/german/: __init__.py
git/police/augmenters/pirate_speak/: __init__.py
git/police/augmenters/yoda_speak/: __init__.py
git/police/background/: core.py  public_shaming.py
git/police/cli/: main.py
git/police/cli/tools/: conventional_commits.py  goodbye.py  haiku.py
git/police/cli/utils/: camera.py  german_translator.py  haiku.py
git/police/happiness/: __init__.py  happiness.py
git/police/repo/: __init__.py  core.py
git/police/rules/: __init__.py  core.py
git/police/rules/alternator/: __init__.py
git/police/rules/cc/: __init__.py
git/police/rules/conventional_commits/: __init__.py
git/police/rules/haiku/: __init__.py  haiku.py
git/police/rules/happiness/: __init__.py  happiness.py
git/police/rules/palindrome/: __init__.py
git/police/rules/piglatin/: __init__.py
git/police/rules/quote/: __init__.py  movie.py
git/police/rules/starwars/: __init__.py  star_wars_quotes.json
git/police/star-wars-qoutes/: star_wars_quotes.json
git/police/tasks/CodingTips/: __init__.py
git/police/tasks/FakeError/: __init__.py
git/police/tasks/Insult/: __init__.py
git/police/tasks/Trivia/: __init__.py
git/police/utils/: coding_tip.py  coding_tips.txt  german_translator.py  haiku.py  llm.py  scathing_code_comments.csv  scathing_code_reviews.csv  scathing_comment.py  telegram_bot.py  telegram_post.py  trivia.py
git_police/: __init__.py
git_police/augmenters/: __init__.py  core.py
git_police/augmenters/antonym/: __init__.py
git_police/augmenters/drunk_typing/: __init__.py
git_police/augmenters/german/: __init__.py  german.py
git_police/augmenters/pirate_speak/: __init__.py
git_police/augmenters/yoda_speak/: __init__.py
git_police/background/: __init__.py  public_shaming.py
git_police/background/PublicShaming/: __init__.py
git_police/cli/: main.py
git_police/cli/utils/: happiness_enforcer.py
git_police/fastapi/: fastapi.py
git_police/happiness/: __init__.py  happiness.py
git_police/repo/: __init__.py
git_police/rules/: __init__.py
git_police/rules/alternator/: __init__.py
git_police/rules/cc/: __init__.py
git_police/rules/haiku/: __init__.py  haiku.py
git_police/rules/palindrome/: __init__.py
git_police/rules/piglatin/: __init__.py
git_police/rules/starwars/: __init__.py
git_police/tasks/: __init__.py  core.py
git_police/tasks/Chess/: __init__.py  chesstest.py  endgame.py
git_police/tasks/CodingTips/: __init__.py
git_police/tasks/FakeError/: __init__.py
git_police/tasks/Insult/: __init__.py
git_police/tasks/Trivia/: __init__.py
git_police/utils/: git_error.csv  scathing_code_comments.csv  scathing_code_reviews.csv  telegram_bot.py
star-wars-qoutes/: scrape.py
tests/: test_sanity.py
walled_library/: __init__.py
