[tool.poetry]
name = "walled-library"
version = "0.0.1"
description = "An open-source toolkit to easily quantize your Huggingface Transformers."
license = "MIT"
authors = ["Prannaya Gupta <prannayagupta@programmer.net>", "Rishabh Bhardwaj"]
readme = "README.md"
repository = "https://github.com/walledai/walled-library"
keywords = ["NLP", "deep learning", "transformer", "language model"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/walledai/walled-library/issues"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.40.1"
accelerate = "^0.31.0"
pyyaml = "^6.0"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]  
pytest = "^7.4"  
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*" 
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"