[tool.poetry]
name = "git-police"
version = "0.0.1"
description = "Police your git commits."
license = "MIT"
authors = ["Prannaya Gupta <prannayagupta@programmer.net>"]
readme = "README.md"
repository = "https://github.com/GitPoliceGroup/lib"
keywords = ["git"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

packages = [
    {include = "git"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/GitPoliceGroup/lib/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
opencv-python = "^4.11.0.86"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]  
pytest = "^7.4"  
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*" 
tox = "^4.15.0"

[tool.poetry.scripts]
git-police = "git.police.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"