[tool.poetry]
name = "git-police"
version = "0.0.1"
description = "Police your git commits."
license = "MIT"
authors = ["Prannaya Gupta <prannayagupta@programmer.net>"]
readme = "README.md"
repository = "https://github.com/GitPoliceGroup/lib"
keywords = ["git"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

packages = [
    {include = "git_police"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/GitPoliceGroup/lib/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = "^0.15.1"
opencv-python = "^4.11.0.86"
nltk = "^3.9.1"
pydantic = "^2.10.5"
gitpython = "^3.1.44"
torch = "^2.5.0"
transformers = "^4.48.0"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
tf-keras = "^2.18.0"
deepface = "^0.0.93"
tensorflow-io-gcs-filesystem = "0.31.0"
langchain-ollama = "^0.2.2"
tqdm = "^4.67.1"
chess = "^1.11.1"
cairosvg = "^2.7.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.30"

[tool.poetry.group.dev.dependencies]  
pytest = "^7.4"  
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*" 
tox = "^4.15.0"

[tool.poetry.scripts]
git-police = "git_police.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"